<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp" >

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_name"
            android:textSize="16sp"
            android:maxLines="1" />

        <EditText
            android:id="@+id/edit_medicine_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:inputType="text"
            android:textSize="16sp"
            android:selectAllOnFocus="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_frequency"
            android:textSize="16sp"
            android:maxLines="1" />

        <EditText
            android:id="@+id/edit_dose_frequency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_dose"
            android:inputType="number"
            android:textSize="16sp"
            android:selectAllOnFocus="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_dose"
            android:textSize="16sp"
            android:maxLines="1" />

        <EditText
            android:id="@+id/edit_dose_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_dose"
            android:inputType="number"
            android:textSize="16sp"
            android:selectAllOnFocus="true" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/edit_unit_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:layout_weight="1"
        android:checkedButton="@id/mg_radio_button"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/mg_radio_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/unit_milligram" />

        <RadioButton
            android:id="@+id/mcg_radio_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/unit_microgram" />

        <RadioButton
            android:id="@+id/drops_radio_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/unit_drop" />

    </RadioGroup>

    <TextView
        android:id="@+id/start_date_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:layout_weight="1"
        android:text="@string/option_start_date"
        android:textSize="16sp"/>

    <DatePicker
        android:id="@+id/start_date_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:datePickerMode="spinner"
        android:calendarViewShown="false"/>

</LinearLayout>